tests/invalid_inputs/test06.bex
var x = new SharedArrayBuffer();

Thread t1 {
  y-F32[0] = 1;
}

Thread t2 {
  print(Atomics.load(x-F32, 0));
}
